# core/internal/api/nodes.go
@@ -107,7 +107,7 @@ func (ro Role) allows(r *http.Request) bool {
 	case RoleAdmin:
 		return true
 	case RoleTroubleshooter:
-		if r.Method == http.MethodPost && (r.URL.Path == "/api/v1/operations/acknowledgements" || r.URL.Path == "/api/v1/operations/handling") {
+		if r.Method == http.MethodPost && (r.URL.Path == "/api/v1/operations/acknowledgements" || r.URL.Path == "/api/v1/operations/handling" || r.URL.Path == "/api/v1/operations/handling/batch") {
 			return true
 		}
 		return r.Method == http.MethodGet
